--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<title>Starbucks Website Landing Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
     <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" >
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
