--- a/menu.html
+++ b/menu.html
@@ -46,31 +46,31 @@
 
       <div class="section-header">
         <h2>Our Menu</h2>
-        <p>Check Our <span>Yummy Menu</span></p>
+        <p>Check Our <span>Stunning Menu</span></p>
       </div>
 
       <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
         <li class="nav-item">
           <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#menu-starters">
-            <h4>Starters</h4>
+            <h4>Bestseller</h4>
           </a>
         </li><!-- End tab nav item -->
 
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-breakfast">
-            <h4>Breakfast</h4>
+            <h4>Drinks</h4>
           </a><!-- End tab nav item -->
 
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-lunch">
-            <h4>Lunch</h4>
+            <h4>Food</h4>
           </a>
         </li><!-- End tab nav item -->
 
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-dinner">
-            <h4>Dinner</h4>
+            <h4>Merchandise</h4>
           </a>
         </li><!-- End tab nav item -->
 
@@ -82,7 +82,7 @@
 
           <div class="tab-header text-center">
             <p>Menu</p>
-            <h3>Starters</h3>
+            <h3>Bestseller</h3>
           </div>
 
           <div class="row gy-5">
@@ -160,7 +160,7 @@
 
           <div class="tab-header text-center">
             <p>Menu</p>
-            <h3>Breakfast</h3>
+            <h3>Drinks</h3>
           </div>
 
           <div class="row gy-5">
@@ -238,7 +238,7 @@
 
           <div class="tab-header text-center">
             <p>Menu</p>
-            <h3>Lunch</h3>
+            <h3>Food</h3>
           </div>
 
           <div class="row gy-5">
@@ -316,7 +316,7 @@
 
           <div class="tab-header text-center">
             <p>Menu</p>
-            <h3>Dinner</h3>
+            <h3>Merchandise</h3>
           </div>
 
           <div class="row gy-5">
