small error with names

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 			<ul class="navigation">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="menu.html">Menu</a></li>
-				<li><a href="chefs.html">What's New</a></li>
+				<li><a href="what's new.html">What's New</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</header>
