--- a/menu.html
+++ b/menu.html
@@ -88,7 +88,7 @@
           <div class="row gy-5">
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img5.jpg" class="glightbox"><img src="img5.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Magnam Tiste</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -99,7 +99,7 @@
             </div><!-- Menu Item -->
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img 6.jpg" class="glightbox"><img src="img 6.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Aut Luia</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -110,7 +110,7 @@
             </div><!-- Menu Item -->
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img 7.jpg" class="glightbox"><img src="img 7.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Est Eligendi</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -121,7 +121,7 @@
             </div><!-- Menu Item -->
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img 8.jpg" class="glightbox"><img src="img 8.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Eos Luibusdam</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -132,7 +132,7 @@
             </div><!-- Menu Item -->
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img 9.jpg" class="glightbox"><img src="img 9.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Eos Luibusdam</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
@@ -143,7 +143,7 @@
             </div><!-- Menu Item -->
 
             <div class="col-lg-4 menu-item">
-              <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
+              <a href="img 10.jpg" class="glightbox"><img src="img 10.jpg" class="menu-img img-fluid" alt=""></a>
               <h4>Laboriosam Direva</h4>
               <p class="ingredients">
                 Lorem, deren, trataro, filede, nerada
